# Dashboard

./: .cursorrules  .gitignore  0_MASTER_PLAN.md  AGENTS.md  META_PROMPT_MASTERPLAN.md  MIGRATION_RESULT.md  README.md  RELEASE_GUIDE.md  SPEC.md  UI.md  agent_orchestrator.py  build.bat  dashboard-demo.html  latest.json  main.js  package-lock.json  package.json  preload.js  requirements-dev.txt  sign-log.txt
.cursor/rules/: build-release.mdc  result-docs.mdc  ui-ux.mdc
MDs/: 0_MASTER_PLAN.md  1_RESULT.md  2_PROMPT.md  2_RESULT.md  3_PROMPT.md  Final.md
_delete/: MIGRATION_PLAN.md
_release_tmp/: latest.json
_rl/: latest.json
_rl2/: latest.json
scripts/: cdp-utils.mjs  check-window-exports.mjs  debug2.mjs  debug3.mjs  diag-p0-click.mjs  diag-p0-inline-style.mjs  diag-p0.mjs  diag-p1.mjs  diag-p2.mjs  diag-p3.mjs  download-fonts.js  extract-module.mjs  gen-icon.js  publish-release.ps1  release.mjs  screenshot.mjs  sign-file.mjs  sign-release.ps1  smoke_run.py  static_check.py  test-alarm.js  test-chip-picker.js  test-rename.js  verify-update-release.mjs
src/: app.js  gemini.js  gemini.test.mjs  google-api.js  google-cache.js  google-cache.test.mjs  index.html  layout-engine.js  layout-engine.test.mjs  local-widgets.js  local-widgets.test.mjs  store-import.test.mjs  store-migration.test.mjs  store-widget.test.mjs  store.js  styles.css  token-store.js  weather-api.js  weather-api.test.mjs  widget-grid.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs  oauth.rs  token_secure.rs
(+32 files in other folders)
